--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-evenly;
+  flex-direction: column;
+  height: 100vh;
+  font-size: 2rem;
+}
+
+.blue {
+  color: brown;
+  text-transform: uppercase;
+  transition: all 0.5s;
+}
+
+.btn {
+  padding: 0.8rem 1rem;
+  border: 1px solid rgb(71, 255, 111);
+  background: rgb(64, 240, 20);
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
